# lib/db/src/schema/index.ts
@@ -20,3 +20,5 @@
 export * from "./members";
 export * from "./projects";
 export * from "./tasks";
+export * from "./conversations";
+export * from "./messages";
